# PointSentinel

./: CMakeLists.txt  Projeto_Integrado.c  README.md  animacoes.h  diagram.json  wokwi.toml
inc/: ssd1306.c  ssd1306.h
